+ Improved Settings Page #49 + Lobby Page - Emit Settings to others in lobby #50

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -643,12 +643,39 @@ a {
 }
 
 .green-button:hover {
-  padding: 10px 32px !important;
+  padding: 0px 32px !important;
 }
 
 .green-button:active {
   transform: translateY(2px) !important;
   box-shadow: inset 0 -2px 0 rgba(0, 0, 0, 0.3), 0 3px 0 #00000040 !important;
+}
+
+.lobby-button {
+  font-family: "Digitalt", Medium !important;
+  font-size: 1.5rem !important;
+  -webkit-text-stroke: 0.5px rgba(0, 0, 0, 0.822) !important;
+  background: linear-gradient(
+    45deg,
+    #929292 0%,
+    /* Heller Ton unten links */ #929292 49.9%,
+    #838383 50%,
+    /* Dunkler Ton oben rechts */ #838383 100%
+  ) !important;
+
+  height: 65px !important;
+  color: rgb(255, 255, 255) !important;
+  padding: 8px 0px !important;
+  border-radius: 25px !important;
+  border: 3px solid white !important;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4) !important;
+
+  box-shadow: inset 0 -4px 0 rgba(0, 0, 0, 0.2), 0 5px 0 #00000023 !important;
+
+  cursor: pointer !important;
+  margin-top: 10px !important;
+  margin-bottom: 30px !important;
+  transition: all 0.1s ease !important;
 }
 
 .player-box,
@@ -932,6 +959,10 @@ a {
   align-items: center;
   margin-top: -55px;
   margin-bottom: 20px;
+}
+
+.settings-banner {
+  margin-top: -10px;
 }
 
 .lobby-banner {
@@ -1502,12 +1533,14 @@ textarea {
 .settings-modal {
   background: #f9f9f9;
   padding: 30px;
-  border-radius: 20px;
+  border-radius: 25px;
   width: 350px;
   position: relative;
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
   text-align: center;
   animation: fadeSlideIn 0.1s ease-out;
+  height: 300px;
+  border: 1px solid rgba(128, 128, 128, 0.644);
 }
 
 .settings-close-button {
@@ -1537,30 +1570,43 @@ textarea {
   padding: 12px;
   border-radius: 12px;
   margin-bottom: 12px;
-  display: flex;
-  justify-content: space-between;
+  margin-top: 29px;
+  justify-content: baseline;
   align-items: center;
 }
 
 .setting-label {
   font-weight: bold;
   font-size: 1.1rem;
-}
-
-.toggle-placeholder {
-  font-size: 1.2rem;
-  color: green;
+  color: black;
+  margin-bottom: 12px;
 }
 
 .delete-account-button {
-  background-color: #ff4d4f;
-  color: white;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 10px;
-  font-weight: bold;
-  cursor: pointer;
-  margin-top: 20px;
+  font-family: "Digitalt", Medium !important;
+  font-size: 1.8rem !important;
+  -webkit-text-stroke: 0.5px rgba(0, 0, 0, 0.822) !important;
+  background: linear-gradient(
+    45deg,
+    #f82c2c 0%,
+    /* Heller Ton unten links */ #f82c2c 49.9%,
+    #ee2929 50%,
+    /* Dunkler Ton oben rechts */ #ee2929 100%
+  ) !important;
+
+  height: 50px !important;
+  color: rgb(255, 255, 255) !important;
+  padding: 5px 30px !important;
+  border-radius: 20px !important;
+  border: 3px solid white !important;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4) !important;
+
+  box-shadow: inset 0 -4px 0 rgba(0, 0, 0, 0.2), 0 5px 0 #00000023 !important;
+
+  cursor: pointer !important;
+  margin-top: 25px !important;
+  margin-bottom: 30px !important;
+  transition: all 0.1s ease !important;
 }
 
 .settings-wrapper {
